@@ -218,7 +218,8 @@ jobs:
           command: "SRC=\"$(pwd)\" && \
             . /tmp/vars.sh && \
             cd /tmp/pqxx && \
-            ( \"$SRC/tools/lint\" --full > >(tee /tmp/analyze.txt >&2 ) 2>&1 )"
+            ( \"$SRC/tools/lint.sh\" --full > >(tee /tmp/analyze.txt >&2 ) \
+            2>&1 )"
           # The "tee" holds up output for a long time, causing the CI to call a
           # timeout after 10 minutes and kill our job.  Request an extension.
           no_output_timeout: 30m
