@@ -45,6 +45,7 @@
  - Now supporting CMake "unity builds."
  - Stop trying to figure out link options for filesystem library.
  - Set `PQXX_LINT=skip` to skip lint checks.
+ - Shell scripts now have "`.sh`" suffix.  Saves hand-coding names.
 7.10.4
  - Logic for controlling non-blocking mode was inverted (non-Windows). (#1057)
 7.10.3
